--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+<style> 
+body {
+    background-image: url("img_tree.gif"), url("paper.gif");
+    }
+</style>
+</head>
+
+<body>
 <h1> Maya Angelou </h1> 
     <h3> Born Marguerite Annie Johnson </h3>
         <h3> (April 4, 1928 – May 28, 2014) </h3>
@@ -28,3 +36,5 @@
         and was placed in the tradition of African-American literature as a defense of Black culture. 
         Her poem, encouraged Black feminist writings in the 1970s to "open themselves up without shame to the eyes of the world." 
         Now, Angelou's poetry has influenced the modern hip-hop music community, including artists such as Kanye West, Tupac Shakur, and Nicki Minaj. </p>
+</body>
+</html>
