--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style> 
 body {
-    background-image: url("img_tree.gif"), url("paper.gif");
+    background-image: url("img_lede_social.jpg");
     }
 </style>
 </head>
