--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style> 
 body {
-    background-image: url("img_lede_social.jpg");
+    background-image: url(https://user-images.githubusercontent.com/89702308/138224796-42b286c4-2f60-4cfb-a54e-f255dcf7e722.jpeg);
     }
 </style>
 </head>
