--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <title>Maya Angelou</title>
+    <link rel="style" href="style.css">
 <style> 
 body {
     background-image: url(https://user-images.githubusercontent.com/89702308/138224796-42b286c4-2f60-4cfb-a54e-f255dcf7e722.jpeg);
