--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
     <title>Maya Angelou</title>
     <link rel="style" href="style.css">
 <style> 
@@ -12,7 +11,7 @@ body {
 </head>
 
 <body>
-<div class="Maya">
+<div class="maya">
 <h1> Maya Angelou </h1> 
     <h3> Born Marguerite Annie Johnson </h3>
         <h3> (April 4, 1928 – May 28, 2014) </h3>
@@ -39,7 +38,7 @@ body {
         and three Grammys for her spoken word albums </p>
 </div>
 
-<div class="Maya"> 
+<div class="legacy"> 
 <h2> Legacy </h2> 
     <p> When ‘Caged Bird’ was published, Angelou was hailed as a new kind of memoirist, 
         and was placed in the tradition of African-American literature as a defense of Black culture. 
