--- a/index.html
+++ b/index.html
@@ -15,35 +15,59 @@ body {
 <h1> Maya Angelou </h1> 
     <h3> Born Marguerite Annie Johnson </h3>
         <h3> (April 4, 1928 – May 28, 2014) </h3>
-        <p> Maya Angelou was an American author, actress, screenwriter, poet and highly influential 
-        civil rights activist who in literary history, wrote the first nonfiction bestseller by an African American woman. 
-        During her time she campaigned civil rights all across the United States </p>
+        <p> <ul>
+            <li>Maya Angelou was an American author, </li>
+            <li>actress, screenwriter, poet and highly influential civil rights </li>
+            <li>activist who in literary history, wrote the </li>
+            <li>first nonfiction bestseller by an African </li> 
+            <li>American woman.</li> 
+            </ul>
+        </p>
 </div>
 
 <div class="works">
 <h2> Top Works </h2> 
-    <p> 
-        <li>‘Still I Rise’ (1978)
-        <li>‘Phenomenal Woman’ (1995)
-        <li>‘I Know Why the Caged Bird Sings’ (1969)
-        <li>‘On the Pulse of Morning’ (1993)
-        <li>‘Life Doesn’t Frighten Me’ (1993)
+    <p> <ul>
+        <li>‘Still I Rise’ (1978)</li>
+        <li>‘Phenomenal Woman’ (1995)</li>
+        <li>‘I Know Why the Caged Bird Sings’ (1969)</li>
+        <li>‘On the Pulse of Morning’ (1993)</li>
+        <li>‘Life Doesn’t Frighten Me’ (1993) </li>
+        </ul>
     </p>
 
 </div>
 <div class="achievements"> </div>
 <h2> Achievements </h2> 
-    <p> Angelou received several honours throughout her career, including the National Medal of Arts in 2000, 
-        and the Presidential Medal of Freedom in 2011, Pulitzer Prize nomination for her book of poetry, 
-        and three Grammys for her spoken word albums </p>
+    <p> <ul>
+        <li>Angelou received several </li>
+        <li>honours throughout her career, </li>
+        <li>including the National Medal </li>
+        <li>of Arts in 2000, and the </li>
+        <li>Presidential Medal of Freedom </li>
+        <li>in 2011, Pulitzer Prize </li>
+        <li>nomination for her book of </li>
+        <li>poetry, and three Grammys for </li>
+        <li>her spoken word albums </li>
+        </ul>
+    </p>
 </div>
 
 <div class="legacy"> 
 <h2> Legacy </h2> 
-    <p> When ‘Caged Bird’ was published, Angelou was hailed as a new kind of memoirist, 
-        and was placed in the tradition of African-American literature as a defense of Black culture. 
-        Her poem, encouraged Black feminist writings in the 1970s to "open themselves up without shame to the eyes of the world." 
-        Now, Angelou's poetry has influenced the modern hip-hop music community, including artists such as Kanye West, Tupac Shakur, and Nicki Minaj. </p>
+    <p> <ul>
+        <li>When ‘Caged Bird’ was published, Angelou was </li>
+        <li>hailed as a new kind of memoirist, and was placed </li>
+        <li>in the tradition of African-American literature as a </li>
+        <li>defense of Black culture. Her poem, encouraged </li>
+        <li>Black feminist writings in the 1970s to "open </li>
+        <li>themselves up without shame to the eyes of the </li>
+        <li>world." Now, Angelou's poetry has influenced the </li>
+        <li>modern hip-hop music community, including artists </li>
+        <li>such as Kanye West, Tupac Shakur, and </li>
+        <li>Nicki Minaj.</li>
+        </ul> 
+    </p>
 </div>
 </body>
 </html>
