--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
     </p>
 
 </div>
-<div class="achievements"> </div>
+<div class="achievements">
 <h2> Achievements </h2> 
     <p> <ul>
         <li>Angelou received several </li>
