--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ body {
         <h3> (April 4, 1928 – May 28, 2014) </h3>
         <p> <ul>
             <li>Maya Angelou was an American author, </li>
-            <li>actress, screenwriter, poet and highly influential civil rights </li>
-            <li>activist who in literary history, wrote the </li>
-            <li>first nonfiction bestseller by an African </li> 
-            <li>American woman.</li> 
+            <li>actress, screenwriter, poet and highly influential </li>
+            <li>civil rights activist who in literary history, </li>
+            <li>wrote the first nonfiction bestseller by an </li> 
+            <li> African American woman.</li> 
             </ul>
         </p>
 </div>
